--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,7 +5,12 @@
 		"ms-python.vscode-pylance",
 		"ms-toolsai.datawrangler",
 		"charliermarsh.ruff",
-		"mechatroner.rainbow-csv"
+		"mechatroner.rainbow-csv",
+		"ms-toolsai.vscode-jupyter-slideshow",
+		"ms-toolsai.jupyter",
+		"ms-toolsai.jupyter-keymap",
+		"ms-toolsai.jupyter-renderers",
+		"ms-toolsai.vscode-jupyter-cell-tags"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
